# bookstore

./: README.md  db.sqlite3  pyproject.toml  requirements.py
bookstore/: settings.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
tests/: test_products.py
